deployment_strategies_with_istio/sentence-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: sentence
    version: v1
  name: sentences-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: sentence
      version: v1
  template:
    metadata:
      labels:
        app: sentences
        mode: sentence
        version: v1
    spec:
      containers:
      - image: praqma/istio-sentences:v1
        name: sentences
        ports:
          - containerPort: 5000
