deployment_strategies_with_istio/age-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: age
  name: age
spec:
  ports:
  - port: 5000
    name: http-age
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: age
  type: ClusterIP
