deployment_strategies_with_istio/sentence-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: sentence
  name: sentences
spec:
  ports:
  - port: 5000
    name: http-sentences
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: sentence
  type: ClusterIP
  # type: NodePort
