deployment_strategies_with_istio/name-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: name-route
spec:
  hosts:
  - name
  exportTo:
  - "."
  gateways:
  - mesh
  http:
  # - match:                #  incorporate v3 blue/green
  #   - headers:            #
  #       x-test:           #
  #         exact: use-v3   # will only be hit if the header match is true.
  #   route:                #
  #   - destination:        #
  #       host: name        #
  #       subset: name-v3   # ...to here
  - route: #two routes are evaluated top down
    - destination:
        host: name
        subset: name-v1
  - route:
    - destination:
        host: name
        subset: name-v2
